# aladin

./: .gitignore  GETTING_STARTED.md  README.md  TODO.md  docker-compose.yml  env.local.template  kind-config.yaml  litellm.yaml  worker.Dockerfile
backend/: .gitignore  Dockerfile  README.md  entrypoint.sh  file::memory:  pyproject.toml
backend/app/: __init__.py  arq_client.py  celery_app.py  config.py  database.py  logger.py  main.py  models.py  schemas.py
backend/app/routers/: __init__.py  agents.py  applications.py  auth.py  avatar_session.py  billing.py  clips.py  conversations.py  data_domains.py  documents.py  ingestion.py  jobs.py  models.py  monitoring.py  stats.py  tasks.py  tenants.py  translation.py  video_transcription.py  voice.py
backend/app/services/: __init__.py  applications.py  auth.py  billing.py  cluster_api.py  document_converter_service.py  document_service.py  document_translation_service.py  email_service.py  embedding_service.py  file_validation.py  helm.py  knowledge_graph_service.py  kubernetes.py  model_service.py  qdrant_service.py  rag_service.py  translation_service.py  video_transcription_service.py
backend/app/tasks/: __init__.py  application_tasks.py  tenant_tasks.py
backend/app/tools/: __init__.py  ingest_url.py  mcp_client.py  search_knowledge_base.py  translate_text.py
backend/app/workers/: __init__.py  base.py  transcription.py  unified.py
backend/app/workers/handlers/: __init__.py  ingestion.py
backend/config/: video_prompts.json
backend/templates/capi/: cluster-template.yaml
backend/tests/: conftest.py  test_agents.py  test_auth.py  test_avatar.py  test_clips.py  test_conversations.py  test_data_domains.py  test_file_validation.py  test_health.py  test_tools.py  test_voice.py
chat-ui/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
chat-ui/src/: App.tsx  api.ts  index.css  store.ts
chat-ui/src/components/: AvatarView.tsx  ChatView.tsx  Login.tsx  TranslationView.tsx  (+1 more)
docs/: AGENTS_ANALYSIS.md  OBSERVABILITY.md  TRANSCRIPTION_LOGS.md  VIDEO_INGESTION_OVERVIEW.md  data-quality-validation.md
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
helm-charts/llm-platform/: Chart.yaml  README.md  values.yaml
migrations/: 001_add_metadata_to_conversations.sql  001_add_vlm_and_processing_type.sql  002_remove_title_from_conversations.sql  005_remove_video_agents_and_add_unique_name_constraint.sql  006_normalize_agent_type_case.sql  007_add_agent_type_check_constraint.sql  008_update_agenttype_enum_to_lowercase.sql  009_add_transcription_jobs.sql  010_add_unified_jobs_table.sql  011_add_video_vlm_prompt_tracker_ocr.sql  012_sanity_fix_orphaned_agent_data_domain_id.sql  013_agent_data_domains_many_to_many.sql  014_clean_orphaned_agent_data_domains.sql  015_object_tracker_default_yolo.sql  016_add_avatar_agent_type_and_config.sql  017_add_agent_tools.sql
scripts/: README.md  check_services.py  recreate-kind-cluster.sh  restart-stack.sh  run-migration.sh  run_migration.py
worker/: README.md  docker-compose.yml  env.template  pyproject.toml
worker/config/: prompts.yaml
worker/shared/: __init__.py  config.py  database.py  schemas.py  telemetry.py
worker/tests/: __init__.py  test_ocr_processor.py  test_tracker_fuser.py  test_video.py  test_vlm_backend.py
worker/video_ingest/: __init__.py  __main__.py
worker/worker/: Dockerfile  __init__.py  __main__.py  avatar_worker.py  cli.py  file_processor.py  main.py  prompts_loader.py  video_processor.py  web_processor.py
worker/worker/file/: __init__.py  chunker.py  cli.py  loader.py  processor.py  rich_processor.py
worker/worker/video/: __init__.py  __main__.py  cli.py  deblurrer.py  ocr_processor.py  prompts.py  schemas.py  tracker.py  video_pipeline.py  video_processor.py  vlm_backend.py
worker/worker/web/: __init__.py  cli.py  crawler.py  processor.py
(+27 files in other folders)
