[project]
name = "rag-agent-platform"
version = "1.0.0"
description = "RAG Agent Management Platform"
requires-python = ">=3.11"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
