[project]
name = "rag-agent-platform"
version = "1.0.0"
description = "RAG Agent Management Platform"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.23",
    "psycopg2-binary>=2.9.9",
    "pydantic[email]>=2.5.3",
    "pydantic-settings>=2.1.0",
    "structlog>=24.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<5.0.0",
    "python-multipart>=0.0.6",
    "qdrant-client>=1.7.0",
    "openai>=1.10.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-community>=0.0.20",
    "langchain-text-splitters>=0.0.1",
    "langgraph>=0.0.20",
    "httpx>=0.26.0",
    "markdown>=3.5.0",
    "redis>=5.0.0",
    "arq>=0.25.0",
    "networkx>=3.0",
    "weasyprint>=60.0",
    "ffmpeg-python>=0.2.0",
    "marker-pdf[full]>=1.0.0",
    "mcp>=1.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",
]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
