[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ingestion-pipeline"
version = "1.0.0"
description = "Document and web ingestion pipeline for vector storage"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "redis>=5.0.0",
    "arq>=0.25.0",

    # Database (for updating document status)
    "sqlalchemy>=2.0.23",
    "psycopg2-binary>=2.9.9",


    # Web crawling
    "crawl4ai>=0.3.0",
    "beautifulsoup4>=4.12.0",

    # Document processing
    "docling>=2.0.0",
    "langchain-docling>=0.1.0",
    "pypdf>=4.0.0",

    # Text splitting
    "langchain-text-splitters>=0.0.1",

    # Vector storage
    "qdrant-client>=1.7.0",
    "openai>=1.0.0",

    # Telemetry
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-exporter-otlp>=1.22.0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
    "opentelemetry-instrumentation-httpx>=0.43b0",
    "opentelemetry-instrumentation-redis>=0.43b0",

    # Video ingestion (MP4 → RAG chunks)
    "numpy>=1.24.0",
    "opencv-python-headless>=4.8.0",
    "pytesseract>=0.3.10",
    "ultralytics>=8.0.0",
    "lap>=0.5.12",
    "pyyaml>=6.0",
    "inference-sdk>=1.0.0",
    "supervision>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.hatch.build.targets.wheel]
packages = ["shared", "worker", "video_ingest"]

